--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,11 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+#set -g prefix2 C-a                        # GNU-Screen compatible prefix
+#bind C-a send-prefix -2
+# Unbind screen prefix (so I can run screen inside ssh inside tmux)
+set -gu prefix2
+unbind C-a
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
@@ -59,7 +62,7 @@ set -g visual-activity off
 bind C-c new-session
 
 # find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
+# bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
 bind - split-window -v
@@ -144,7 +147,7 @@ run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
 # copy to macOS clipboard
 if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to X11 clipboard
 if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
 if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
